updated ge requirements

--- a/POSC 315 Intro Policy/asynch proposal/posc315_asynch_proposal.tex
+++ b/POSC 315 Intro Policy/asynch proposal/posc315_asynch_proposal.tex
@@ -68,7 +68,7 @@ By the end of this course, students will be able to
 
 \subsection*{Requirements Satisfied}
 
-	This course satisfies General Education Explorations in Social Sciences subarea D.5. The writing assignments in this course, including the policy memo papers and current event summaries described below, meet the requirement of UPS 411.201: 
+	This course satisfies American History, Institutions \& Values subarea D.3 of general education (GE) requirements. The writing assignments in this course, including the policy memo papers and current event summaries described below, meet the requirement of UPS 411.201: 
 	\begin{quote}Writing assignments in General Education courses shall involve the organization and expression of complex data or ideas and careful and timely evaluations of writing so that deficiencies are identified, and suggestions for improvement and/or for means of remediation are offered. Evaluations of the student's writing competence shall determine the final course grade\ldots .\end{quote}
     A grade of “D” (1.0) or higher is required to meet this General Education requirement. A grade of “D-“ (0.7) or below will not satisfy this General Education requirement.
 
@@ -77,10 +77,10 @@ By the end of this course, students will be able to
 	Students completing courses in this subarea shall encounter the following learning goals:
 
 \begin{enumerate}
-	\item Examine problems, issues, and themes in the social sciences in greater depth; in a variety of cultural, historical, and geographical contexts; and from different disciplinary and interdisciplinary perspectives.
-	\item Analyze and critically evaluate the application of social science concepts and theories to particular historical, contemporary, and future problems or themes, such as economic and environmental sustainability, globalization, poverty, and social justice.
-	\item Analyze and critically evaluate constructs of cultural differentiation, including ethnicity, gender, race, class, and sexual orientation, and their effects on the individual and society.
-	\item Apply theories and concepts from the social sciences to address historical, contemporary, and future problems confronting communities at different geographical scales, from local to global.
+    \item Examine problems, issues, and themes in the social sciences in greater depth; in a variety of cultural, historical, and geographical contexts; and from different disciplinary and interdisciplinary perspectives.
+    \item Analyze and critically evaluate the application of social science concepts and theories to particular historical, contemporary, and future problems or themes, such as economic and environmental sustainability, globalization, poverty, and social justice.
+    \item Analyze and critically evaluate constructs of cultural differentiation, including ethnicity, gender, race, class, and sexual orientation, and their effects on the individual and society.
+    \item Apply theories and concepts from the social sciences to address historical, contemporary, and future problems confronting communities at different geographical scales, from local to global.
 \end{enumerate}
 
 \section*{Text Book}
