--- a/POSC 315 Intro Policy/asynch proposal/posc315_asynch_proposal.tex
+++ b/POSC 315 Intro Policy/asynch proposal/posc315_asynch_proposal.tex
@@ -113,7 +113,7 @@ If you encounter any technical difficulties with Canvas, call the Canvas Support
 \section*{Response Time} I will strive to respond to all student emails, Discord posts, and \emph{Canvas} messages within 24 hours, except on weekends and holidays. If you are still awaiting a response within 24 hours, please send a follow-up message. If you are still waiting to receive a response within 48 hours, please send another follow-up message and contact me via phone or text at \href{tel:+16572784770}{(657) 278-4770}.
 
 
-\section{University Student Policies}
+\section*{University Student Policies}
 
 In accordance with UPS 300.00, students must be familiar with certain policies applicable to all courses. Please review these policies as needed and visit this Cal State Fullerton website \texttt{\href{https://fdc.fullerton.edu/teaching/student-info-syllabi.html}{https://fdc.fullerton.edu/teaching/student-info-syllabi.html}} for links to the following information:
 
