--- a/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
+++ b/POSC 315 Intro Policy/2024-25 Fall/posc315_fall_2024.tex
@@ -15,8 +15,7 @@
 \renewcommand\familydefault{\sfdefault}
 
 \begin{document}
-\title{\includegraphics[width=6cm]{/Users/dadams/repositories/syllabi/Images/stacked.png} \\\vspace{1ex} \textbf{Introduction to Public Policy}}
-
+\title{\textbf{Introduction to Public Policy}}
 \author{POSC 315-02 -- Fall 2024}
 \date{Tuesdays and Thursdays at 11:30 in MH 554 \\\vspace{2ex} \textsc{August 26 -- December 13, 2024}}
 
