--- a/CRJU_POSC 320 Intro PA/2024-25 Intersession/CRJU-POSC_320.tex
+++ b/CRJU_POSC 320 Intro PA/2024-25 Intersession/CRJU-POSC_320.tex
@@ -192,10 +192,14 @@ Students are expected to participate in all course activities. This includes com
 In this course, the use of AI is permitted and encouraged as a learning tool, with the following guidelines:
 
 \begin{itemize}
-    \item \textbf{Allowed}: Using AI for feedback on annotated bibliographies and syntheses, as outlined in the assignment.
-    \item \textbf{Allowed}: Using AI for the optional reflection activity.
-    \item \textbf{Not Allowed}: Submitting AI-generated content as your own work without substantial human input and critical analysis.
-    \item \textbf{Not Mandatory}: The use of AI is optional. Students are not required to use AI tools if they prefer not to.
+    \item \textbf{Allowed}: Using AI to generate feedback on writing assignments, such as grammar suggestions, style improvements, or additional insights.
+    \item \textbf{Allowed}: Using AI to generate ideas or prompts for discussions, essays, or other assignments.
+    \item \textbf{Allowed}: Using AI to assist in research, such as summarizing articles, generating citations, or providing additional context.
+    \item \textbf{Not Allowed}: Submitting AI-generated content as your own work without proper attribution.
+    \item \textbf{Not Allowed}: Using AI to complete assignments that require original thought, analysis, or interpretation.
+    \item \textbf{Not Allowed}: Using AI to generate responses in discussions or other interactive activities where personal engagement is required.
+    \item \textbf{Not Allowed}: Using AI to take quizzes, exams, or other assessments that are meant to evaluate your individual understanding and skills.
+    \item \textbf{Not Allowed}: Using AI to engage in academic dishonesty, such as plagiarism, cheating, or misrepresentation of your work.
 \end{itemize}
 
 \subsubsection*{Rationale for AI Policy}
