--- a/POSC 315 Intro Policy/2024-25 Spring/posc315_spring_2025.tex
+++ b/POSC 315 Intro Policy/2024-25 Spring/posc315_spring_2025.tex
@@ -1,23 +1,26 @@
-% POSC 315 - Syllabus - Online Asynchronous - Fall 2024
+% POSC 315 - Spring 2025
 
-\documentclass[12pt, letterpaper]{article}
-\usepackage[margin=1in]{geometry}
+\documentclass[11pt, letterpaper]{article}
+\usepackage[margin=1.25in]{geometry}
 \usepackage{xcolor}
 \usepackage[colorlinks=true, linkcolor=blue, urlcolor=blue, citecolor=blue]{hyperref}
 \usepackage{url}
 \usepackage{graphicx}
 \usepackage{bookmark}
 \usepackage{enumitem}
+\usepackage{caption}
+\usepackage{longtable}
+\usepackage{booktabs}
 \frenchspacing
 \usepackage{titlesec}
 \titleformat{\section}{\normalfont\Large\bfseries}{\thesection.}{1em}{}
-\usepackage[scaled]{helvet}
-\renewcommand\familydefault{\sfdefault}
+\usepackage[sfdefault]{roboto}
+
 
 \begin{document}
 \title{\textbf{Introduction to Public Policy}}
-\author{POSC 315-02 -- Fall 2024}
-\date{Tuesdays and Thursdays at 11:30 in MH 554 \\\vspace{2ex} \textsc{August 26 -- December 13, 2024}}
+\author{POSC 315-02 -- Spring 2025}
+\date{Tuesdays and Thursdays at 11:30 in Humanities 426 \\\vspace{2ex} \textsc{January 18 -- May 15, 2025}}
 
     \maketitle
 
@@ -27,15 +30,15 @@
 \subsubsection*{Contact Information:}
 
 \begin{itemize}
-	\item Office: 516 Gordon Hall
+	\item Office: Gordon Hall 516
 	\item Phone/Text: \href{tel:+16572784770}{(657) 278-4770}
 	\item Zoom: \href{https://fullerton.zoom.us/j/3347502369}{\texttt{https://fullerton.zoom.us/j/3347502369}}
 	\item website: \href{https://dadams.io}{\texttt{dadams.io}}
 	\item email: \href{dpadams@fullerton.edu}{\texttt{dpadams@fullerton.edu}}
 	\item Office Hours:
         \begin{itemize}
-            \item Tuesdays and Thursdays: 9:30 -- 11:00 a.m.; Thursdays: 5:00pm -- 6:00 p.m.
-            \item Schedule meetings throughout the week: \href{https://dadams.io/appt}{\texttt{dadams.io/appt}}
+            \item Tuesdays and Thursdays: 9:30 -- 11:00 a.m.; Tuesdays: 5:30pm -- 6:30 p.m.
+            \item Schedule meetings throughout the week: \href{https://dadams.io/appointments}{\texttt{dadams.io/appointments}}
         \end{itemize}  
 \end{itemize}
 
@@ -87,10 +90,7 @@ By the end of this course, students will be able to
 
 \section{Text Books}
 
-
-\paragraph{}\noindent \textbf{Required}: Kraft, Michael E. and Scott R. Furlong. 2025. \emph{Public Policy: Politics, Analysis, and Alternatives}. 8th ed. CQ Press: Thousand Oaks, Calif.
-
-\paragraph{}\noindent \emph{Recommended}: Smith, Kevin B. and Christopher W. Larimer. 2017. \emph{The Public Policy Theory Primer}. 3rd ed. Westview Press: Boulder, Colo.
+\paragraph{}\noindent \textbf{Required}: Birkland, T. A. (2020). \emph{An Introduction to the Policy Process: Theories, Concepts, and Models of Public Policy Making} (5th ed.). Routledge. ISBN: 978-0367333286
 
 \section{Technical Competencies}
 
@@ -144,6 +144,10 @@ All course announcements and communications will be sent via \emph{Canvas} and u
 \subsection*{Due Dates}
 All assignments are due by 11:59 p.m. on the specified due date. Save for extenuating circumstances, late assignments will not be accepted unless prior arrangements have been made with the professor. Students are responsible for submitting assignments on time. Failure to submit an assignment on time may result in a failing grade for the assignment. 
 
+\paragraph{} The exception to this policy is the final paper, which must be submitted by 12:50 p.m. on the due date. Late submissions of the final paper will not be accepted unless prior arrangements have been made with the professor.
+
+\paragraph{}Students are expected to plan ahead and manage their time effectively to ensure that assignments are submitted on time. If you are having trouble meeting a deadline, please contact the professor as soon as possible to discuss the situation.
+
 \subsection*{Alternative Procedures for Submitting Work}
 Students are expected to submit all assignments via \emph{Canvas}. If you cannot submit an assignment via \emph{Canvas}, please get in touch with the professor to discuss alternative submission procedures.
 
@@ -151,16 +155,16 @@ Students are expected to submit all assignments via \emph{Canvas}. If you cannot
 Students are responsible for retaining copies of all assignments submitted for this course. Students are also responsible for retaining copies of all graded assignments returned by the professor.
 
 \subsection*{Extra Credit}
-There is one bonus assignment available in this course. A documentary analysis assignment will be available in Week 15. The assignment is optional and will provide extra credit points on the final exam. The assignment will be graded based on the quality of the analysis and the depth of engagement with the course material.
+There is no extra credit available in this course. Students are expected to complete all assigned work to the best of their ability. Failure to complete assigned work may result in a failing grade for the course.
 
 \subsection*{Academic Integrity}
 Students are expected to adhere to the highest standards of academic integrity. Any student found to have engaged in academic dishonesty will be subject to the sanctions described in the \href{https://www.fullerton.edu/senate/publications_policies_resolutions/ups/UPS%20300/UPS%20300.021.pdf}{Academic Dishonesty Policy} (UPS 300.021). Academic dishonesty includes, but is not limited to, cheating, plagiarism, fabrication, facilitating academic dishonesty, and submitting previously graded work without prior authorization. Students are expected to be familiar with the university's policy on academic dishonesty and to adhere to this policy in all aspects of this course. Any student who has questions about the policy should ask the professor for clarification.
 
 \subsection*{Written Work}
-All written work must be submitted in a professional format, including proper grammar, spelling, and punctuation. Written work must also be properly cited using the appropriate citation style. Students are expected to follow the guidelines for written work provided by the professor and to seek clarification if they have questions about the requirements.
+All written work must be submitted in a professional format, including proper grammar, spelling, and punctuation. Written work must also be properly cited using the appropriate citation style. Students are expected to follow the guidelines for written work provided by the professor and to seek clarification if they have questions about the requirements. Assignments that do not meet these standards may be subject to point deductions or resubmission requirements.
 
 \subsection*{Plagiarism}
-Plagiarism is a serious violation of academic integrity and will not be tolerated in this course. Plagiarism includes, but is not limited to, copying and pasting text from sources without proper citation, paraphrasing text from sources without proper citation, and submitting work that is not your own. Students are expected to properly cite all sources used in their work and to submit original work. Failure to do so may result in a failing grade for the assignment and further disciplinary action. Written work will be checked for plagiarism using plagiarism detection software.
+Plagiarism is a serious violation of academic integrity and will not be tolerated in this course. Plagiarism includes, but is not limited to, copying and pasting text from sources without proper citation, paraphrasing text from sources without proper citation, and submitting work that is not your own. Students are expected to properly cite all sources used in their work and to submit original work. Failure to do so may result in a failing grade for the assignment and further disciplinary action. Written work will be checked for plagiarism using plagiarism detection software. If you are unsure whether your work constitutes plagiarism, consult the professor before submitting.
 
 \subsection*{AI-Generated Text and Tool Usage Policy}
 
@@ -182,8 +186,6 @@ Plagiarism is a serious violation of academic integrity and will not be tolerate
 \textbf{AI Detection Tools:} Assignments will be checked for originality using advanced AI detection software. Any submission found to contain unoriginal content generated by AI without proper citation will be subject to the university's academic dishonesty policy. Submitting AI-generated text as your own work, without attribution, is considered plagiarism.
 
 \vspace{1ex}
-
-\noindent\textbf{Collaboration and AI Use:} While collaboration is encouraged in this course, any use of AI tools must be clearly documented, and all collaborators must agree on the use and citation of AI-generated content. Collaborative work that involves AI tools must be transparently disclosed in the submission.
 
 \subsubsection*{Guidance and Resources}
 \textbf{Ethical AI Usage Resources:} Students are encouraged to take advantage of available resources on responsible AI usage. This includes online tutorials, ethical guidelines, and citation practices. Workshops or additional materials on how to use AI tools responsibly may be provided throughout the course.
@@ -207,87 +209,70 @@ Students are expected to participate in all course activities. This includes com
 Students are expected to adhere to the university's policy on netiquette. The university's policy on netiquette is as follows:
 \begin{quote}Netiquette refers to a set of behaviors that are appropriate for online activity (e.g., social media, email, discussions, presentations). All personnel at Cal State Fullerton are expected to demonstrate appropriate online behavior at all times. A good summary of netiquette can be found in the \href{https://canvashelp.fullerton.edu/m/Student/l/1336786-student-what-is-netiquette}{CSUF Canvas self-help guides}, which adapts ten rules to the online course situation from the website for the book \href{http://www.albion.com/netiquette/corerules.html}{Netiquette by Virginia Shea} and other sources referenced at the bottom of the guide.\end{quote}
 
+\section{Course Assignments}
 
-\section{Kritik: Peer Review Platform}
-
-\noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
-
-\subsection*{Kritik Assignments}
-\noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
-
-\subsection*{Kritik Overview}
-
-\begin{itemize}
-
-\item \textbf{A Three-Stage Writing Process:}
-
-\begin{enumerate}
-    \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
-    \item Provide Constructive Critique: Anonymously evaluate your peers' work using the rubric. Offer actionable feedback that focuses on the strengths and weaknesses of their analysis, drawing connections to relevant public administration concepts.
-    \item Reflect and Improve: Receive anonymous feedback on the quality and impact of your comments. Learn to deliver clear, concise, and impactful feedback—a crucial skill for public servants collaborating on complex issues.
-\end{enumerate}
-
-\item \textbf{Grading and Participation:} You'll earn four scores for each Kritik activity: Creation, Evaluation, Feedback, and Overall. These scores, along with active participation, will contribute to your course grade. Participating thoughtfully in Kritik activities will not only improve your own skills but also enrich the learning experience for your peers.
-
-\item \textbf{Registration and Support:} We'll thoroughly introduce Kritik in class, and a dedicated email invitation will guide you through registration and course enrollment. The Kritik Help Center offers additional resources, and I'm always available to address any questions or concerns.
-\end{itemize}
-\section{Course Assignment Descriptions}
-\subsection*{Discussion Posts (20\% of Final Grade)} 
-\begin{itemize}
-    \item \textbf{Description}: \emph{Students will participate in \underline{six of the eight} online discussion boards}, responding to prompts related to the current week's readings and lectures. Prompts may involve analyzing case studies, applying theoretical concepts to current events, or debating policy issues.
-    \item \textbf{Expectations}: Students are expected to post a response to the prompt and engage with their classmates' posts. Discussion posts are due by 11:59 p.m. on Saturdays for the week they are assigned. Late posts will not be accepted.
-    \item \textbf{Objectives}: Engage with course material, apply theoretical concepts to real-world scenarios, and develop critical thinking skills.
-    \item \textbf{Grading Criteria}: Posts will be graded based on the quality of the response, depth of analysis, timeliness of contributions, and engagement with classmates' posts.
-    \item \textbf{Skipped Posts}: Students are expected to complete six of the eight discussion posts. Indicate a skipped post by submitting a blank post with the subject line "Skipped Post."
-\end{itemize}
+\subsection*{Reading Quizzes (25\% of Final Grade)}
+Reading quizzes will be assigned weekly to assess students' understanding of the course readings. Quizzes will consist of multiple-choice questions based on the assigned readings for that week. Quizzes will be available on \emph{Canvas} and must be completed by 11:59 p.m. on the due date.
 
 \subsection*{Policy Process Analysis Paper (35\% of Final Grade)}
-
-This course includes a scaffolded and peer-reviewed writing project where students will analyze a specific policy issue through the lens of policy process theories. The project will be completed in stages, with opportunities for peer review and feedback at each stage. The final paper will be a 10-12 page policy process analysis paper that applies policy process theories to understand the selected policy issue's development, implementation, and/or impact. Kritik will be used for out to submit drafts and provide feedback to peers.
+This course includes a scaffolded and peer-reviewed writing project where students will analyze a specific policy issue through the lens of policy process theories. The project will be completed in stages, with opportunities for peer review and feedback at each stage. The final paper will be a 10-12 page policy process analysis paper that applies policy process theories to understand the selected policy issue's development, implementation, and/or impact. Each stage of the project will be graded based on the rubric provided in the assignment instructions. Peer reviews will also be graded based on the provided rubric.
 
 \subsubsection*{Project Stages}
 \begin{enumerate}
-    \item \textbf{Topic Selection and Proposal (Week 3)}
+    \item \textbf{Topic Selection and Proposal (Due Week 4)}
     \begin{itemize}
         \item Submit a one-page proposal outlining the policy issue, its significance, and a preliminary research question focusing on the policy process (e.g., agenda-setting, formulation, implementation, evaluation).
-        \item Participate in peer reviews of proposals.
+        \item Conduct detailed peer reviews using a provided rubric.
     \end{itemize}
-    \item \textbf{Annotated Bibliography (Week 6)}
+    \item \textbf{Annotated Bibliography (Due Week 7)}
     \begin{itemize}
         \item Compile an annotated bibliography of 8-10 sources, summarizing and evaluating each source's relevance to your research question and its relation to policy process theories.
-        \item Exchange and review peers' bibliographies.
+        \item Conduct detailed peer reviews using a provided rubric.
     \end{itemize}
-    \item \textbf{Literature Review (Week 9)}
+    \item \textbf{Literature Review (Due Week 10)}
     \begin{itemize}
         \item Write a 3-4 page literature review synthesizing key findings, identifying gaps in the research, and situating your analysis within the broader context of policy process theories.
-        \item Review and comment on peers' literature reviews.
+        \item Conduct detailed peer reviews using a provided rubric.
     \end{itemize}
-    \item \textbf{Draft Analysis (Week 12)}
+    \item \textbf{Draft Analysis (Due Week 14)}
     \begin{itemize}
         \item Submit a 6-8 page draft analysis, including an introduction, literature review, theoretical framework, and preliminary conclusions on how policy process theories explain the issue.
         \item Conduct detailed peer reviews using a provided rubric.
     \end{itemize}
-    \item \textbf{Final Paper (Week 15)}
+    \item \textbf{Final Paper (Due Week 16)}
     \begin{itemize}
         \item Submit a final 10-12 page policy process analysis paper, incorporating peer feedback and additional research or revisions. The paper should apply policy process theories to understand the selected policy issue's development, implementation, and/or impact.
     \end{itemize}
 \end{enumerate}
 
-\paragraph{} This project will help you develop your research, analytical, evaluative, and writing skills while providing a deep understanding of policy theory and the policy process. The project will also provide opportunities for peer review and feedback, enhancing your ability to provide and receive constructive criticism. 
+\paragraph{} This project will help you develop your research, analytical, evaluative, and writing skills while providing a deep understanding of policy theory and the policy process. The project will also provide opportunities for peer review and feedback, enhancing your ability to provide and receive constructive criticism.
 
-\subsection*{Midterm Exam (20\% of Final Grade)}
-An in-class midterm exam will be held in Week 8. The exam will cover material from the first half of the course, including readings, lectures, and discussions. The exam will consist of multiple-choice, short answer, and essay questions.
+\subsection*{Exam 1 (15\% of Final Grade)}
+An in-class midterm exam will be held in Week 8. The exam will cover material from the first half of the course, including readings, lectures, and discussions. The exam will consist of multiple-choice and essay questions.
 
-\subsection*{Final Exam (25\% of Final Grade)}
-An in-class final exam will be held during the scheduled final exam period. The final exam will be comprehensive and cover all material from the course, including readings, lectures, discussions, and assignments. The final exam will consist of multiple-choice, short answer, and essay questions.
+\subsection*{Exam 2 (15\% of Final Grade)}
+An in-class exam will be held during the 13th week of the course. The exam will cover policy process theories, policy analysis methods, and the application of these concepts to specific policy issues. The exam will consist of multiple-choice and essay questions.
+
+\subsection*{Participation and Active Learning (10\% of Final Grade)}
+Participation in this course is essential for your success. Participation includes attending all class sessions, actively engaging in discussions, asking questions, and contributing to group activities. Participation also includes completing all assigned readings, watching all assigned videos, and participating in all discussions. Participation will be assessed based on your contributions to class discussions, group activities, and other course activities.
+
 
 \section{Grading}
 Grades will be allocated based on the following components:
 \begin{itemize}
-    \item \textbf{Discussion Posts}: 20\%
+    \item \textbf{Reading Quizzes}: 25\%
     \item \textbf{Policy Analysis Paper}: 35\%
-    \item \textbf{Midterm Exam}: 20\%
-    \item \textbf{Final Exam}: 25\%    
+        \begin{itemize}
+            \item Topic Selection and Proposal: 2\%
+            \item Annotated Bibliography: 3\%
+            \item Literature Review: 5\%
+            \item Draft Analysis: 10\%
+            \item Final Paper: 10\%
+            \item Combined Peer Reviews: 5\%
+        \end{itemize}
+    \item \textbf{Exam 1}: 15\%
+    \item \textbf{Exam 2}: 15\% 
+    \item \textbf{Participation}: 10\%   
 \end{itemize}
 
 \subsection*{Grading Scale}
@@ -310,120 +295,77 @@ Grades will be allocated based on the following components:
 
 \section{Course Schedule}
 
-\begin{itemize}
-    \item \textbf{Week 1: August 27 and August 29}
-    \begin{itemize}
-        \item \textbf{Topic:} Introduction to Public Policy
-        \item \textbf{Readings:} Smith \& Larimer, Chapter 1; Kraft \& Furlong, Chapter 1
-        \item \textbf{Discussion:} Why Study Public Policy?
-    \end{itemize}
+\begin{center}
+\begin{longtable}{p{2cm} | p{6.8cm} | p{6.8cm}}	
+	\label{tab:schedule} \\
+    \large{\textbf{week}} & \large{\textbf{Tuesday}} & \large{\textbf{Thursday}} \\ \hline \hline
 
-    \item \textbf{Week 2: September 3 and September 5}
-    \begin{itemize}
-        \item \textbf{Topic:} Government Institutions and Policy Actors
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 2; Smith \& Larimer, Chapter 3
-        \item \textbf{Discussion:} Decision-Making Models and Institutional Rational Choice
-    \end{itemize}
-
-    \item \textbf{Week 3: September 10 and September 12}
-    \begin{itemize}
-        \item \textbf{Topic:} Understanding Public Policymaking
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 3; Smith \& Larimer, Chapter 5
-        \item \textbf{Assignment:} Topic Selection and Proposal Due
-    \end{itemize}
-
-    \item \textbf{Week 4: September 17 and September 19}
-    \begin{itemize}
-        \item \textbf{Topic:} Policy Design and Typologies
-        \item \textbf{Readings:} Smith \& Larimer, Chapter 4; Kraft \& Furlong, Chapter 3
-        \item \textbf{Discussion:} Policy Typologies as Analytic Tools
-    \end{itemize}
-
-    \item \textbf{Week 5: September 24 and September 26}
-    \begin{itemize}
-        \item \textbf{Topic:} Policy Analysis Introduction
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 4; Smith \& Larimer, Chapter 6
-        \item \textbf{Discussion:} Rationalist and Post-Positivist Approaches
-    \end{itemize}
-
-    \item \textbf{Week 6: October 1 and October 3}
-    \begin{itemize}
-        \item \textbf{Topic:} Impact Analysis and Program Evaluation
-        \item \textbf{Readings:} Smith \& Larimer, Chapter 7; Kraft \& Furlong, Chapter 6
-        \item \textbf{Assignment Due:} Annotated Bibliography 
-    \end{itemize}
-
-    \item \textbf{Week 7: October 8 and October 10}
-    \begin{itemize}
-        \item \textbf{Topic:} Policy Implementation
-        \item \textbf{Readings:} Smith \& Larimer, Chapter 8; Kraft \& Furlong, Chapter 6
-        \item \textbf{Discussion:} Implementation Analysis and Challenges
-    \end{itemize}
-
-    \item \textbf{Week 8: October 15 and October 17}
-    \begin{itemize}
-        \item \textbf{Topic:} Midterm Review
-        \item \textbf{Exam:} Midterm Exam
-    \end{itemize}
-
-    \item \textbf{Week 9: October 22 and October 24}
-    \begin{itemize}
-        \item \textbf{Topic:} Economic and Budgetary Policy
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 7
-        \item \textbf{Assignment:} Literature Review Due
-    \end{itemize}
-
-    \item \textbf{Week 10: October 29 and October 31}
-    \begin{itemize}
-        \item \textbf{Topic:} Social and Environmental Policy
-        \item \textbf{Readings:} Kraft \& Furlong, Chapters 8 and 11
-    \end{itemize}
-
-    \item \textbf{Week 11: November 5 and November 7}
-    \begin{itemize}
-        \item \textbf{Topic:} Policy Change and Innovation
-        \item \textbf{Readings:} Smith \& Larimer, Chapter 9
-        \item \textbf{Discussion:} Policy Change and Innovation
-    \end{itemize}
-
-    \item \textbf{Week 12: November 12 and November 14}
-    \begin{itemize}
-        \item \textbf{Topic:} Foreign Policy and Homeland Security
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 12
-        \item \textbf{Assignment:} Draft Analysis Due
-    \end{itemize}
-
-    \item \textbf{Week 13: November 19 and November 21}
-    \begin{itemize}
-        \item \textbf{Topic:} Policy Conflicts and Strategies
-        \item \textbf{Readings:} Kraft \& Furlong, Chapter 13
-        \item \textbf{Discussion:} Policy Conflicts and Strategies
-    \end{itemize}
-
-    \item \textbf{Break}: November 26 and November 28
-    \begin{itemize}
-        \item \textbf{Note:} Thanksgiving Break (No Class on November 26 and 28)
-    \end{itemize}
-
-    \item \textbf{Week 14: December 3 and December 5}
-    \begin{itemize}
-        \item \textbf{Topic:} Class Wrap-Up and Bonus Documentary Screening 
-        \item \textbf{Discussion:} Course Reflections and Final Thoughts
-    \end{itemize}
-
-    \item \textbf{Week 15: December 10 and December 12}
-    \begin{itemize}
-        \item \textbf{Topic:} Final Exam Review
-        \item \textbf{Assignment:} Final Paper Due
-    \end{itemize}
-
-    \item \textbf{Week 16: December 17}
-    \begin{itemize}
-        \item \textbf{Final Exam: 11:00 - 12:50}
-        \item \textbf{Bonus Assignment:} Optional Documentary Analysis Due
-
-    \end{itemize}
-\end{itemize}
-
+    \emph{week 1} & \underline{1/21:} \textbf{Introduction} & \underline{1/23:} \textbf{Overview of Policy} \\
+    \emph{Readings} & Syllabus & \textit{Birkland ch. 1} \\
+    & & American Regime Values \\\hline
+    
+    \emph{week 2} & \underline{1/28:} \textbf{Policy Process Elements} & \underline{1/30:} \textbf{Policy Process Theories} \\
+    \emph{Readings} & \textit{Birkland ch. 2} & Posted to \textit{Canvas} \\
+    & & \\\hline
+    
+    \emph{week 3} & \underline{2/4:} \textbf{History \& Structure} & \underline{2/6:} \textbf{Official Policy Actors} \\
+    \emph{Readings} & \textit{Birkland ch. 3} & \textit{Birkland ch. 4}\\
+    & &  \\\hline
+    
+    \emph{week 4} & \underline{2/11:} \textbf{Unofficial Policy Actors I} & \underline{2/13:} \textbf{Unofficial Policy Actors II} \\
+    \emph{Readings} & \textit{Birkland ch. 5} & \href{https://www.csuchico.edu/iege/_assets/documents/susi-letter-from-birmingham-jail.pdf}{\textit{Letter from the Birmingham Jail}} \\
+    & & \textbf{Due: Term Paper Topic} \\\hline
+    
+    \emph{week 5} & \underline{2/18:} \textbf{Documentary 1} & \underline{2/20:} \textbf{Documentary 1 Discussion} \\
+    \emph{Readings} & & \\
+    & & \textbf{Due: Peer Review} \\\hline
+    
+    \emph{week 6} & \underline{2/25:} \textbf{Agenda Setting} & \underline{2/27:} \textbf{Policy Types} \\
+    \emph{Readings} & \textit{Birkland ch. 6} & \textit{Birkland ch. 7} \\
+    & & \\\hline
+    
+    \emph{week 7} & \underline{3/4:} \textbf{Decision Making I} & \underline{3/6:} \textbf{Decision Making II} \\
+    \emph{Readings} & \textit{Birkland ch. 8} & Posted to \textit{Canvas} \\
+    & & \textbf{Due: Term Paper Annotated Bib.}  \\\hline
+    
+    \emph{week 8} & \underline{3/11:} \textbf{Exam 1 Review} & \underline{3/13:} \textbf{Exam 1} \\
+    \emph{Readings} & & \\
+    & & \textbf{Due: Peer Review} \\\hline
+    
+    \emph{week 9} & \underline{3/18:} \textbf{Policy Analysis I} & \underline{3/20:} \textbf{Policy Analysis II} \\
+    \emph{Readings} & \textit{Birkland ch. 8} & Posted to \textit{Canvas} \\
+    & & \\\hline
+    
+    \emph{week 10} & \underline{3/25:} \textbf{Writing Day} & \underline{3/27:} \textbf{Writing Day} \\
+    & \textit{1:1 Meetings with Professor} & \textit{1:1 Meetings with Professor} \\
+    & & \textbf{Due: Term Paper Lit. Review} \\\hline
+    
+    \emph{Spring Break} & \multicolumn{2}{c}{\textbf{3/31 -- 4/7: Spring Break}} \\\hline
+    
+    \emph{week 11} & \underline{4/8:} \textbf{Policy Design \& Tools} & \underline{4/10:} \textbf{Implementation} \\
+    \emph{Readings} & \textit{Birkland ch. 9} & \textit{Birkland ch. 10} \\
+    & & \textbf{Due: Peer Review} \\\hline
+    
+    \emph{week 12} & \underline{4/15:} \textbf{Failure and Learning} & \underline{4/17:} \textbf{Evaluation and Science} \\
+    \emph{Readings} & \textit{Birkland ch. 10} & \textit{Birkland ch. 11} \\
+    & & \\\hline
+    
+    \emph{week 13} & \underline{4/22:} \textbf{Documentary 2} & \underline{4/24:} \textbf{Documentary 2 Discussion} \\
+    \emph{Readings} &  &  \\
+    & & \textbf{Due: Term Paper Draft} \\\hline
+    
+    \emph{week 14} & \underline{4/29:} \textbf{Exam 2 Review} & \underline{5/1:} \textbf{Exam 2} \\
+    \emph{Readings} & & \\
+    & & \textbf{Due: Peer Review} \\\hline
+    
+    \emph{week 15} & \underline{5/6:} \textbf{Writing Day} & \underline{5/8:} \textbf{Writing Day} \\
+    & \textit{1:1 Meetings with Professor} & \textit{1:1 Meetings with Professor} \\
+    & & \\\hline
+    
+    \emph{week 16} & & \underline{5/15:} \textbf{Due: Final Draft Term Paper} \\
+    & & \textit{Submit by 12:50 p.m.} \\
+    & & \\\hline
+\end{longtable}
+\end{center}
 
 \end{document}
